# langchain-tutorial

./: langchain-tutorial.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Functions, Tools and Agents with LangChain/: 1 - OpenAI Function Calling.ipynb
docker/: Dockerfile
